--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -8,6 +8,14 @@ YYYY/MM/DD - MAJOR.MINOR.RELEASE
 [!] = Fix / Security
 
 
+2021/05/27 - 1.0.1
+——————————————————
+[!] Sync icon when logged out
+[+] Reduced memory footprint
+[*] Minor code refactoring
+[*] Better settings change detection
+
+
 2021/05/21 - 1.0.0
 ——————————————————
 [!] Less fatal errors
