--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -8,6 +8,15 @@ YYYY/MM/DD - MAJOR.MINOR.RELEASE
 [!] = Fix / Security
 
 
+2022/02/11 - 1.1.4
+——————————————————
+[!] TOTP secret with spaces
+[!] Proper Steam Guard codes
+[+] Added support for Min Browser
+[+] Added support for Bitwarden CLI v1.21
+[=] Bitwarden CLI version >= 1.11.0
+
+
 2021/11/08 - 1.1.3
 ——————————————————
 [!] TOTP generation for other than otpauth Key Uri
